--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "mongoose": "^4.13.3",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
-    "socket.io": "^2.1.0",
-    "sports-live": "^1.0.1"
+    "socket.io": "^2.1.0"
   }
 }
