--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "express": "~4.15.5",
     "hbs": "~4.0.1",
     "jsonwebtoken": "^8.1.0",
+    "lint-fix": "^0.24.0",
     "mongoose": "^4.13.3",
     "morgan": "~1.9.0",
+    "nodemon": "^1.19.1",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.1.0"
   }
